--- a/my-app/src/app/heroes/heroes.component.html
+++ b/my-app/src/app/heroes/heroes.component.html
@@ -9,7 +9,7 @@
     <span>{{heroli.id}}</span>{{heroli.name}}
   </li>
 </ul>
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
 
   <h2>{{selectedHero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{selectedHero.id}}</div>
@@ -19,4 +19,5 @@
     </label>
   </div>
 
-</div>
+</div> -->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
