--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -16,8 +16,11 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <h1>{{title}}</h1>
+  <nav>
+    <a routerLink="/heroes">Heroes</a>
+  </nav>
 </div>
-<app-heroes></app-heroes>
+<!-- <app-heroes></app-heroes> -->
 <app-messages></app-messages>
 
 
