--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -18,6 +18,7 @@
   <h1>{{title}}</h1>
   <nav>
     <a routerLink="/heroes">Heroes</a>
+    <a routerLink="/dashboard">Dashboard</a>
   </nav>
 </div>
 <!-- <app-heroes></app-heroes> -->
