--- a/my-app/src/app/heroes/heroes.component.html
+++ b/my-app/src/app/heroes/heroes.component.html
@@ -5,8 +5,10 @@
   </label>
 </div>
 <ul>
-  <li *ngFor="let heroli of heros" (click)="onSelect(heroli)">
-    <span>{{heroli.id}}</span>{{heroli.name}}
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
   </li>
 </ul>
 <!-- <div *ngIf="selectedHero">
@@ -20,4 +22,4 @@
   </div>
 
 </div> -->
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
