--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,11 +1,4 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
 
 <style>
   h1{
@@ -16,10 +9,11 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <h1>{{title}}</h1>
- 
+  <h2>this is app module header!warn!</h2>
   <nav>
-    <a routerLink="/heroes">Heroes</a>
-    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a><br/>
+    <a routerLink="/dashboard">Dashboard</a><br/>
+    <a routerLink="/childtest">childtest</a><br/>
   </nav>
 </div>
 <!-- <app-heroes></app-heroes> -->
