--- a/my-app/src/app/child-test/child-test.component.html
+++ b/my-app/src/app/child-test/child-test.component.html
@@ -49,3 +49,9 @@
     </div>
   </div>
 </div>
+<el-button type="primary">主要按钮</el-button>
+<el-slider (modelChange)="handle($event)">
+</el-slider>
+<el-alert type="success">
+  成功提示的文案
+</el-alert>
