--- a/my-app/src/app/mainpage/mainpage.component.html
+++ b/my-app/src/app/mainpage/mainpage.component.html
@@ -1,7 +1,4 @@
-<p>
-  mainpage works!
-</p>
-<!-- Toolbar -->
+
 <div class="toolbar" role="banner">
   
   <nav>
@@ -10,7 +7,26 @@
     <a routerLink="/childtest">childtest</a><br/>
   </nav>
 </div>
-<!-- <app-heroes></app-heroes> -->
+<div class="mainpagebox">
+  <el-table [model]="tableData" [scroll-x]="true" center="all" cell-click="test($EventEmitter)">
+    <el-table-column model-key="name" label="姓名" width="140">
+    </el-table-column>
+    <el-table-column model-key="date" label="日期" width="140">
+    </el-table-column>
+    <el-table-column model-key="address" label="地址" width="140" [render-html]="true">
+    </el-table-column>
+     <el-table-column label="操作" width="120">
+      <ng-template #slot let-scope="scope">
+        <el-button type="text" size="small" (click)="handle(scope)">删除</el-button>
+      </ng-template>
+    </el-table-column>
+     <el-table-column label="操作" width="120">
+      <ng-template #slot let-scope="scope">
+        <el-button type="text" size="small" (click)="handle(scope)">删除</el-button>
+      </ng-template>
+    </el-table-column>
+  </el-table>
+</div>
 
 
 
