--- a/my-app/src/app/mainpage/mainpage.component.css
+++ b/my-app/src/app/mainpage/mainpage.component.css
@@ -1,3 +1,20 @@
 .mainpagebox{
     /* background: yellow; */
+   /* display: flex; */
+   /* flex-direction: row;
+   flex-wrap: nowrap;
+   justify-content: center; */
+}
+.asidemenu{
+    /* width: 200px; */
+    min-height: 400px;
+    /* background: yellow; */
+    float: left;
+}
+.contextBox{
+    width: 900px;
+    padding: 15px;
+    min-height: 400px;
+    /* background: blue; */
+    float: left;
 }
