--- a/my-app/src/app/mainpage/mainpage.component.html
+++ b/my-app/src/app/mainpage/mainpage.component.html
@@ -26,6 +26,7 @@
             <el-menu-item index="2"><i class="el-icon-menu"></i>导航二</el-menu-item>
             <el-menu-item index="3"><i class="el-icon-setting"></i>导航三</el-menu-item>
             <el-menu-item index="3"><i class="el-icon-setting"><a routerLink="/dashboard">Dashboard</a></i></el-menu-item>
+            <el-menu-item index="3"><i class="el-icon-setting"><a routerLink="/childtest">TestChild</a></i></el-menu-item>
           </el-menu>
         </div>
     </div>
