--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -15,4 +15,7 @@
     <el-button (click)="reset()">重置</el-button>
   </el-form-item>
   </el-form>
+  <div class="textbox">
+    <div class="textbox1">6666</div>
+  </div>
 </div>
