--- a/my-app/src/styles.less
+++ b/my-app/src/styles.less
@@ -1,2 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~element-angular/theme/index.css";
+
+*{margin:0;padding:0;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-text-size-adjust:none;-webkit-user-select:none;-ms-user-select:none;user-select:none;}
+img{border:none;max-width:100%;vertical-align:middle;}
+body,p,form,input,button,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6{margin:0;padding:0;list-style:none;overflow-x:hidden}
+h1,h2,h3,h4,h5,h6{font-size:100%;}
+input,textarea{-webkit-user-select:text;-ms-user-select:text;user-select:text;-webkit-appearance:none;}
+table{border-collapse:collapse;}
+input,select,textarea{outline:none;border:none;background:none;}
+a:link,a:active{text-decoration:none;}
+a:visited{text-decoration:none;}
+a:hover{color:#f00;text-decoration:underline;}
+a{text-decoration:none;-webkit-touch-callout:none;}
+em,i{font-style:normal;}
+li,ol{list-style:none;}
+.clear{clear:both;height:0;font-size:0;line-height:0;visibility:hidden; overflow:hidden;} 
+.fl{float:left;}
+.fr{float:right;}
+body{ margin:0 auto;max-width:640px; min-width:320px;color:#555; padding-bottom:8%;height:100%;}
