--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -18,4 +18,7 @@
   <div class="textbox">
     <div class="textbox1">6666</div>
   </div>
+  <div>
+      <img src="./assets/static/aa.png" class="img1">
+  </div>
 </div>
