--- a/my-app/src/app/mainpage/mainpage.component.css
+++ b/my-app/src/app/mainpage/mainpage.component.css
@@ -18,3 +18,22 @@
     /* background: blue; */
     float: left;
 }
+
+.testbox{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    z-index: 5;
+    background: rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sbox{
+    width: 200px;
+    height: 100px;
+    border: 1px solid blue;
+    background: #fff;
+}
