--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -21,4 +21,6 @@
   <div>
       <img src="./assets/static/aa.png" class="img1">
   </div>
+  <el-button  (click)="testMessService()">testMess</el-button>
 </div>
+<app-show-log></app-show-log>
