[add] rx.js subject

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,5 +22,6 @@
       <img src="./assets/static/aa.png" class="img1">
   </div>
   <el-button  (click)="testMessService()">testMess</el-button>
+  <el-button  (click)="testMessSubject()">testMessSubject</el-button>
 </div>
 <app-show-log></app-show-log>
