--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,7 @@
   <div>
       <img src="./assets/static/aa.png" class="img1">
   </div>
+  <div class="imgbox"></div>
   <el-button  (click)="testMessService()">testMess</el-button>
 </div>
 <app-show-log></app-show-log>
