--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,6 +22,7 @@
       <img src="./assets/static/aa.png" class="img1">
   </div>
   <div class="imgbox"></div>
+  <div class="imgbox2" style="background:url('./assets/static/aa.png')"></div>
   <el-button  (click)="testMessService()">testMess</el-button>
   <el-button  (click)="testMessSubject()">testMessSubject</el-button>
 </div>
